--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+html {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+    height: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.player {
+    color: #ea1313;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+    font-size: 3rem;
+    margin: 0;
+    margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.notification {
+    font-size: 1.9rem;
+    text-decoration: underline;
 }
+
+.main {
+    display: flex;
+    justify-content: space-evenly;
+    width: 70vw;
+    align-items: flex-start;
+    margin: 0 77px 75px 0;
+}
+
+.tic-tac-toe {
+    width: 304px;
+    height: 304px;
+    border: 2px solid #000;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cell {
+    width: 100px;
+    height: 100px;
+    border: 1px solid #000;
+    font-size: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn {
+    background-color: #000;
+    color: #fff;
+    padding: 10px;
+    border: 0;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 1.3rem;
+    font-family: 'Permanent Marker', cursive;
+    letter-spacing: 2px;
+}
+
+.score,
+.choose-first {
+    border: 3px solid #000;
+    padding: 10px;
+    font-size: 1.3rem;
+    border-radius: 5px;
+}
+
+.choose-first { 
+    max-width: 230px;
+}
+
+.choose-first h2 {
+    margin-bottom: 10px;
+}
+
+.choose-buttons {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.choose-btn {
+    padding: 1px 10px;
+    background-color: #fff;
+    border: 3px solid #000;
+    font-size: 1.6rem;
+    min-width: 48px;
+}
+
+.choose-btn:hover {
+    background-color: #000;
+}
+
+@media (max-width: 1100px) {
+    .main {
+        width: 100vw;
+    }
+}
+
+@media (max-width: 920px) {
+    .main {
+        flex-direction: column;
+        align-items: center;
+        margin: 0 0 75px 0;
+        min-height: 678px;
+    }
+
+    .header {
+        height: 106px;
+    }
+}
+
